# admitplus-gemini

./: Dockerfile  README.md  pyproject.toml  requirements.txt
admitplus/: config.py  main.py
admitplus/.adk/: session.db
admitplus/agent/: __init__.py
admitplus/agent/.adk/: session.db
admitplus/agent/core/: root_agent.py
admitplus/agent/service/: redis_session_service.py  services.py
admitplus/agent/tools/: exam_tools.py  profile_tools.py
admitplus/api/: __init__.py
admitplus/api/agency/: agencies_router.py  agency_member_repo.py  agency_members_router.py  agency_members_service.py  agency_profile_repo.py  agency_schema.py  agency_service.py
admitplus/api/analysis/: analysis_schema.py  analyze_service.py
admitplus/api/auth/: account_router.py  auth_router.py  auth_schema.py  auth_service.py  token_schema.py
admitplus/api/dashboard/: dashboard_router.py  dashboard_service.py
admitplus/api/essays/: essay_draft_schema.py  essay_record_schema.py  essay_repo.py  essay_router.py  essay_schema.py  essay_schema_v1.py  essay_service.py  whisper_router.py
admitplus/api/exams/: exam_attempt_repo.py  exam_attempt_schema.py  exam_attempt_service.py  exam_attempts_router.py  exam_evaluaion_utils.py  exam_evaluation_repo.py  (+8 more)
admitplus/common/: exceptions.py  response_schema.py
admitplus/database/: milvus.py  mongo.py  mysql.py  redis.py
admitplus/dependencies/: role_check.py
admitplus/llm/: llm_utils.py
admitplus/utils/: content_extractor.py  crypto_utils.py  email_utils.py  feishu_utils.py  jwt_utils.py  search_utils.py  validation_utils.py
(+97 files in other folders)
