[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "admitplus"
version = "1.0.0"
description = "Backend for the AdmitPlus Multi-Agent Education OS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["admitplus*"]
